Add beta
